@@ -2477,6 +2477,75 @@ RQuery::$defaultFilters['service']['location']['operators']['is'] = Array(
 //
 
 // <editor-fold desc=" ***** Tag filters *****" defaultstate="collapsed" >
+RQuery::$defaultFilters['tag']['refcount']['operators']['>,<,=,!'] = Array(
+    'eval' => '$object->countReferences() !operator! !value!',
+    'arg' => true
+);
+RQuery::$defaultFilters['tag']['object']['operators']['is.unused'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        return $context->object->countReferences() == 0;
+    },
+    'arg' => false
+);
+RQuery::$defaultFilters['tag']['name']['operators']['is.in.file'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        $object = $context->object;
+
+        if( !isset($context->cachedList) )
+        {
+            $text = file_get_contents($context->value);
+
+            if( $text === false )
+                derr("cannot open file '{$context->value}");
+
+            $lines = explode("\n", $text);
+            foreach( $lines as  $line)
+            {
+                $line = trim($line);
+                if(strlen($line) == 0)
+                    continue;
+                $list[$line] = true;
+            }
+
+            $context->cachedList = &$list;
+        }
+        else
+            $list = &$context->cachedList;
+
+        return isset($list[$object->name()]);
+    },
+    'arg' => true
+);
+RQuery::$defaultFilters['tag']['object']['operators']['is.tmp'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        return $context->object->isTmp();
+    },
+    'arg' => false
+);
+RQuery::$defaultFilters['tag']['name']['operators']['eq'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        return $context->object->name() == $context->value;
+    },
+    'arg' => true
+);
+RQuery::$defaultFilters['tag']['name']['operators']['eq.nocase'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        return strtolower($context->object->name()) == strtolower($context->value);
+    },
+    'arg' => true
+);
+RQuery::$defaultFilters['tag']['name']['operators']['contains'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        return strpos($context->object->name(), $context->value) !== false;
+    },
+    'arg' => true
+);
 RQuery::$defaultFilters['tag']['name']['operators']['regex'] = Array(
     'Function' => function(TagRQueryContext $context )
     {
@@ -2497,6 +2566,25 @@ RQuery::$defaultFilters['tag']['name']['operators']['regex'] = Array(
             derr("regular expression error on '{$value}'");
         if( $matching === 1 )
             return true;
+        return false;
+    },
+    'arg' => true
+);
+RQuery::$defaultFilters['tag']['location']['operators']['is'] = Array(
+    'Function' => function(TagRQueryContext $context )
+    {
+        $owner = $context->object->owner->owner;
+        if( strtolower($context->value) == 'shared' )
+        {
+            if( $owner->isPanorama() )
+                return true;
+            if( $owner->isFirewall() )
+                return true;
+            return false;
+        }
+        if( strtolower($context->value) == strtolower($owner->name()) )
+            return true;
+
         return false;
     },
     'arg' => true
